<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    cardview:cardUseCompatPadding="true"
    cardview:cardCornerRadius="4dp"
    cardview:contentPadding="6dp"
    cardview:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image Section -->
        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:layout_marginEnd="6dp"/>

        <!-- Text and Button Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Item Name -->
            <TextView
                android:id="@+id/itemNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <!-- Item Name -->
            <TextView
                android:id="@+id/itemDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_description"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp"/>

            <!-- Item Quantity -->
            <TextView
                android:id="@+id/itemQuantityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

            <!-- Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/itemAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/itemAddButtonColor"
                    android:elevation="2dp"
                    android:text="@string/itemAdd"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/itemSubtractButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/itemSubtractButtonColor"
                    android:elevation="2dp"
                    android:text="@string/itemSubtract"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>